# bitcoin

./: .travis.yml  README.md  bitcoin.log.2021-03-26_10-49  bitcoin.log.2021-03-26_10-53  bitcoin.log.2021-03-26_10-56  bitcoin.log.2021-03-26_10-57  bitcoin.log.2021-03-26_11-07  pyproject.toml  requirements.txt
bitcoin/: common_functions.py  sample.py  transformation.py
client_data/: .part-00000-9bae1289-58ee-42bb-99eb-9f994bfe111b-c000.csv.crc  .part-00000-e20810b7-fa89-4a98-95e3-42dbda33d147-c000.csv.crc  part-00000-c174af76-1009-42bd-b675-a6da788c2321-c000.csv  part-00000-e20810b7-fa89-4a98-95e3-42dbda33d147-c000.csv
logs/: bitcoin.log.2021-03-26_11-18  bitcoin.log.2021-03-26_11-32  bitcoin.log.2021-03-26_12-12  bitcoin.log.2021-03-26_12-13
tests/: test_bitcoin.py
