[tool.poetry]
name = "bitcoin"
version = "0.1.0"
description = ""
authors = ["Saurabh Kumar <saurabh1tna@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.1.1"
chispa = "^0.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
